[gd_scene load_steps=8 format=3 uid="uid://beiuin8lugews"]

[ext_resource type="Script" path="res://Scenes/Player.gd" id="1_6ymoc"]
[ext_resource type="Texture2D" uid="uid://da1rwuomwhkhs" path="res://Assets/Shooter/Parts/engine2.png" id="2_n5sam"]
[ext_resource type="Texture2D" uid="uid://bpok06kh82hkh" path="res://Assets/Shooter/Parts/gun10.png" id="3_1sxsr"]
[ext_resource type="Texture2D" uid="uid://c72qrgda32dm6" path="res://Assets/Shooter/Parts/gun09.png" id="4_gfcnt"]
[ext_resource type="Texture2D" uid="uid://wm1bdxhfxdl" path="res://Assets/missiles/towerDefense_tile203.png" id="5_ljusi"]
[ext_resource type="Texture2D" uid="uid://ccfxfjwgdymt8" path="res://Assets/Shooter/playerShip1_red.png" id="6_is6b6"]
[ext_resource type="Texture2D" uid="uid://dnnvp8yhqwmvh" path="res://Assets/Shooter/Effects/shield3.png" id="7_0n57e"]

[node name="Player" type="CharacterBody2D"]
collision_mask = 152
script = ExtResource("1_6ymoc")

[node name="Engine" type="Sprite2D" parent="."]
visible = false
position = Vector2(-2.38419e-07, 43)
scale = Vector2(0.238095, 0.4375)
texture = ExtResource("2_n5sam")

[node name="GunLeft" type="Sprite2D" parent="."]
position = Vector2(-28, -5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_1sxsr")
flip_v = true

[node name="GunRight" type="Sprite2D" parent="."]
position = Vector2(28, -5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_gfcnt")
flip_v = true

[node name="MissileLauncher" type="Sprite2D" parent="."]
position = Vector2(0, -40)
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_ljusi")

[node name="SpaceShipBody" type="Sprite2D" parent="."]
texture = ExtResource("6_is6b6")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -37, -12, -10, -36, 3, -35, 22, -13, 26, -6, 35, 5, 35, 13, 26, 36, 22, 36, 3, 10, -11)

[node name="LeftGunPosition" type="Marker2D" parent="."]
position = Vector2(-29.493, -16.5)

[node name="RightGunPosition" type="Marker2D" parent="."]
position = Vector2(29.599, -16.5)

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="MissileTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MissilePosition" type="Marker2D" parent="."]
position = Vector2(0, -44.575)

[node name="Shield" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("7_0n57e")

[connection signal="timeout" from="LaserTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="MissileTimer" to="." method="_on_missile_timer_timeout"]
